[package]
name = "lockbox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive"] }
orion = "0.17.11"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zeroize = "1.8.2"
